19/5/2010:	v4.1.47
	- openSUSE 11.3 theme

30/4/2010:	v4.1.46
	- added Asturian (bnc #562202)
	- fixed examples to work with latest gfxboot.c32
	- set valid tss for pm calls

27/4/2010:	v4.1.45
	- strip gfxboot.com related parts from syslinux-3.86 patchset

16/4/2010:	v4.1.44
	- fix help text formatting

16/4/2010:	v4.1.43
	- reset progress bar status after error

9/4/2010:	v4.1.42
	- add patches for syslinux 3.86
	- prefer gfxboot.c32 over gfxboot.com

10/12/2009:	v4.1.41
	- leave more room for timeout indicator (bnc #551718)
	- center main menu (bnc #562089)

16/11/2009:	v4.1.40
	- syslinux patch: fix chdir() return value

30/10/2009:	v4.1.39
	- updated translations (bnc #551046)

29/10/2009:	v4.1.38
	- extend interface so it works with gfxboot.c32

19/10/2009:	v4.1.37
	- fix progress indicator for PXE boot

19/10/2009:	v4.1.36
	- more examples

15/10/2009:	v4.1.35
	- improved gfxtest script
	- added some sample themes

14/10/2009:	v4.1.34
	- support pxe setup in test script
	- added patches for syslinux 3.83

12/10/2009:	v4.1.33
	- updated speech samples

12/10/2009:	v4.1.32
	- added swiss french keymap

7/10/2009:	v4.1.31
	- sync keyboard mapping list with yast (bnc #534856)

2/10/2009:	v4.1.30
	- fix pot file

30/9/2009:	v4.1.29
	- build new font
	- enhanced gfxboot-font
	- cleaned up po files
	- more flexible translation support 
	- livecd: add F4=kerneloptions

29/9/2009:	v4.1.28
	- set default install type correctly (bnc #542781)

28/9/2009:	v4.1.27
	- updated language list
	- fixed grub picture (bnc #542113)

24/9/2009:	v4.1.26
	- escape weird chars in URLs

18/9/2009:	v4.1.25
	- F-key assignments configurable via gfxboot.cfg

15/9/2009:	v4.1.24
	- added proxy setup (bnc #329668)

14/9/2009:	v4.1.23
	- fix some nasm warnings
	- updated 11.2 openSUSE theme (bnc #538949)
	- added network config dialog

9/9/2009:	v4.1.22
	- allow empty menus
	- added new gfxtest script
	- support qemu-kvm
	- improved gfxtest script; removed old test script