@@ -998,7 +998,7 @@ void parse_config(char *name, char *log_file)
       incl_level--;
       line = cfg[incl_level].line;
     }
-    word = next_word(&cfg[incl_level].ptr);
+    word = next_word((char **) &cfg[incl_level].ptr);	// unsigned char **
     if(!word || !*word) continue;
 
     if(word[0] == '%') {
